test(gui): Modularize again